# autonomy_hri

./: .gitignore  CMakeLists.txt  Makefile  README.md  mainpage.dox  manifest.xml  stack.xml
Pioneer-HRI/: CMakeLists.txt  README.md  jointlines.patch  mainpage.dox  manifest.xml  markers.vcg
Pioneer-HRI/launch/: demo.launch  multi-party-demo.launch  priss_leg_detection.launch  roy_leg_detection.launch
Pioneer-HRI/src/: GestureRec.cpp  LegTalk.cpp  findClosestPoint2Laser.cpp  findLegState.cpp  findLegs.cpp  findLegs.cpp.save  findLegsEX.cpp  joySound.cpp  justTalk.cpp  kinectTilt.cpp  legDetection.cpp  leg_detection.cpp  likelihood_field.cpp  likelihood_field.h  lkgrid.cpp  lkgrid.h  move_base.cpp  my_scan_to_cloud.cpp  pioneerHRI.cpp  pioneer_teleop.cpp  pioneerhrisound.cpp  see-laser.cpp  see_sonar.cpp  skel-marker.cpp  soundWalk.cpp  velSound.cpp
RobotSounds/: listen.pls
RobotSounds/A/: ball.tgz
autonomy_hri/: CMakeLists.txt  package.xml
autonomy_human/: CMakeLists.txt  README.md  log.sh  manifest.xml  package.xml
autonomy_human/cascades/: README
autonomy_human/config/: autonomy_human.yaml
autonomy_human/launch/: autonomy_human.launch  body_detect.launch  demo.launch  demo_usbcam.launch  drone_test.launch  election_incremental.launch  election_result_mode2.launch  election_result_mode2.launch~  election_simultaneously.launch  face_detection.launch  face_detector_uvccam.launch  flow.launch  torso_detection.launch
autonomy_human/msg/: SortedNamespaces.msg  election.msg  flow.msg  human.msg  raw_detections.msg
autonomy_human/msg_gen/cpp/include/autonomy_human/: human.h
autonomy_human/msg_gen/lisp/: _package.lisp  _package_human.lisp  autonomy_human-msg.asd  human.lisp
autonomy_human/src/: autonomy_human.cpp  face_pose_estimator.cpp  face_pose_estimator.hpp  get_elected.cpp  get_elected_demo.cpp  get_elected_increamental.cpp  get_elected_incremental.cpp  get_elected_simultaneously.cpp  get_elected_test.cpp  test_flow.cpp
autonomy_human/src/autonomy_human/msg/: __init__.py  _human.py
autonomy_leg_detection/: CMakeLists.txt  package.xml
autonomy_leg_detection/include/: polarcord.h
autonomy_leg_detection/launch/: leg_detection.launch  leg_detection.launch~
autonomy_leg_detection/src/: leg_detection.cpp
autonomy_legdetection/: CMakeLists.txt  package.xml
autonomy_legdetection/launch/: leg_detection.launch
autonomy_legdetection/src/: leg_detection.cpp
cartesian_likelihood_field/: CMakeLists.txt  package.xml
cartesian_likelihood_field/include/: polarcord.h
cartesian_likelihood_field/launch/: cartesian_likelihood.launch  play_bag.launch  record_bag.launch
cartesian_likelihood_field/src/: cartesian_grid.cpp  cartesian_grid.h  cartesian_grid_interface.cpp  cartesian_grid_interface.h  cartesian_likelihood_field.cpp
hark_msgs/: CMakeLists.txt  package.xml
hark_msgs/launch/: hark.launch
hark_msgs/msg/: HarkSource.msg
hark_msgs/scripts/: demo.sh  demoOffline.n  demoOfflineRos.n  demoOnline.n  demoOnlineRos.n  demoRos.sh
hark_msgs/scripts/Record/: .demoALSA.sh.swp  demoALSA.sh
hark_msgs/scripts/Record/n-files/: demoALSA.n  demoRASP24_8ch.n  demoWS_8ch.n
hark_msgs/scripts/hark/: demoOnline_Ros.n
hark_msgs/scripts/old-version/: demo.sh  demoOffline.n  demoOnline_Ros.n  kinect_sep.tff
launch/: demo.launch
likelihood_field/: CMakeLists.txt  package.xml
likelihood_field-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  likelihood_field.cbp
likelihood_field-build/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
likelihood_field-build/catkin_generated/installspace/: likelihood_field.pc  likelihood_fieldConfig.cmake
likelihood_field-build/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
likelihood_field-build/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
likelihood_field-build/devel/lib/likelihood_field/: likelihood_field
likelihood_field-build/devel/lib/pkgconfig/: likelihood_field.pc
likelihood_field-build/devel/share/likelihood_field/cmake/: likelihood_fieldConfig.cmake
likelihood_field-build/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
likelihood_field/include/: lkgrid.h  polarcord.h
likelihood_field/launch/: likelihood.launch  likelihood_face.launch  likelihood_face_leg.launch  likelihood_field.launch  likelihood_leg.launch  likelihood_torso.launch  likelihood_torso_leg.launch
likelihood_field/msg/: HarkSource.msg  HarkSource.msg~  HarkSourceVal.msg
likelihood_field/src/: grid.cpp  grid.h  grid_interface.cpp  grid_interface.h  likelihood_field.cpp  lkgrid.cpp  lkgrid.h  lkgrid_interface.cpp  lkgrid_interface.h
likelihood_grid/: CMakeLists.txt  csoundgrid.cpp  csoundgrid.h  package.xml
likelihood_grid/cfg/: Test.cfg
likelihood_grid/cfg/rviz/: demo.rviz
likelihood_grid/hark_patches/: hark_indigo_common_msgs_2_1_0_autonomylab.diff
likelihood_grid/include/: polarcord.h
likelihood_grid/launch/: demo.launch  likelihood.launch  lms111-horizontal.launch  openni.launch  pc-demo.launch  play_bag.launch  record_bag.launch  robot_demo.launch
likelihood_grid/src/: chumangrid.cpp  chumangrid.h  cleggrid.cpp  cleggrid.h  csoundgrid.cpp  csoundgrid.h  cvisiongrid.cpp  cvisiongrid.h  data_extraction.cpp  distance_data.cpp  grid.cpp  grid.h  human_grid_node.cpp  kalmanfilter.cpp  kalmanfilter.h  leg_grid.cpp  leg_grid.h  leg_grid_node.cpp  likelihood_grid.cpp  likelihood_grid.h  likelihood_grid_node.cpp  sound_grid_node.cpp  test.cpp  vision_grid_node.cpp
msg/: human.msg
src/: autonomy_human.cpp
