<?xml version="1.0"?>
<package>
  <name>autonomy_legdetection</name>
  <version>0.0.0</version>
  <description>Leg detection package based on miarn_ros library</description>

  <maintainer email="spourmeh@sfu.ca">Shokoofeh Pourmehr</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/miarn_test</url> -->
  <!-- <author email="spourmeh@sfu.ca">Shokoofeh Pourmehr</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>miarn_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>miarn_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
