<?xml version="1.0"?>
<package>
  <name>likelihood_field</name>
  <version>0.0.0</version>
  <description>The likelihood_field package</description>
  <maintainer email="spourmeh@sfu.ca">Shokoofeh Pourmehr</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/likelihood_field</url> -->

  <author  email="spourmeh@sfu.ca">Shokoofeh Pourmehr </author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>autonomy_human</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>autonomy_human</run_depend>



  <export>
  </export>
</package>
